// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge renders a badge as a dot 1`] = `
<div class="relative inline-block z-badge">Badge <div class="text-center transform z-badge-content bg- w-2 h-2 top-px right-px text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2 p-0 rounded-full"><span></span></div>
</div>
`;

exports[`Badge renders a badge with content 1`] = `
<div class="relative inline-block z-badge"><button href="#" type="button" class="inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap text-ink-400 justify-center h-10 px-4 py-2 text-base space-x-2 leading-8 bg-juniper hover:bg-juniper-600">
    <!----> Likes
  </button>
  <div class="text-center transform z-badge-content bg-cherry top-px right-0 h-6 w-6 flex justify-center items-center text-xxs font-bold text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2 leading-4 rounded-full"><span>12</span></div>
</div>
`;

exports[`Badge renders with size 1`] = `
<div class="relative inline-block z-badge">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with size 2`] = `
<div class="relative inline-block z-badge">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with size 3`] = `
<div class="relative inline-block z-badge">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with state 1`] = `
<div class="relative inline-block z-badge" state="success">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with state 2`] = `
<div class="relative inline-block z-badge" state="danger">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with state 3`] = `
<div class="relative inline-block z-badge" state="warning">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with state 4`] = `
<div class="relative inline-block z-badge" state="info">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;

exports[`Badge renders with state 5`] = `
<div class="relative inline-block z-badge" state="default">Badge <div class="text-center transform z-badge-content bg- top-0 inline-block text-xs px-2 text-vanilla-100 absolute translate-x-1/2 -translate-y-1/2" style="display: none;"><span></span></div>
</div>
`;
